--- a/index.html
+++ b/index.html
@@ -12,7 +12,10 @@
     </head>
 
     <body>
-        <div class = "title">PARROT CARD GAME</div>
+        <div class = "header">
+        <div class = "title">PARROT CARD GAME</div> 
+        <div class="counter"></div>
+        </div>
         <div class="gameSpace">
             <ul class="game">
             <li class = "cardBack displayNone">
